...
    <string name="Sig">Siguiente</string>
    <string name="vel">Score</string>
    <string name="men_principal">MENÚ PRINCIPAL</string>
    <string name="texto_estad">Estadísticas</string>
    <string name="texto_salir_menup">Salir</string>
    <string name="titulo_sel_nivel">Seleccione la dificultad del juego:</string>
    <string name="texto_facil">Fácil</string>
    <string name="VelProm">Velocidad Promedio : </string>
    <string name="VelMax">Velocidad Maxima : </string>
    <string name="Volver">Volver a jugar</string>
    <string name="texto_medio">Medio</string>
    <string name="texto_dificil">Difícil</string>
    <string name="texto_regresoMenu">Volver</string>
    <string name="texto_vEstTitulo">Estadísticas de juego</string>
    <string name="Partidas">Jugadas : </string>
    <string name="texto_vActivaTitulo">¡Juego en marcha!</string>
    <string name="texto_vActivaSalir">Salir</string>
    <string name="texto_perfil">Perfil</string>
...
