...
        android:layout_height="34dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="60dp"
        android:textColor="#009688"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/VelocidadTitle_Tview"
        app:layout_constraintStart_toEndOf="@+id/tiempoTitle_Tview" />

    <TextView
        android:id="@+id/tiempoTitle_Tview"
        android:layout_width="wrap_content"
        android:layout_height="34sp"
...
